# sneakydog-raspberrypi-demo

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  nohup.out  pyproject.toml  raspi.list  requirements.txt  sneakydog-raspberrypi-demo.service
.github/workflows/: dockerbuild.yml
src/flask_raspberrypi_demo/: settings.py
src/sneakydog_raspberrypi_demo/: __init__.py  settings.py  tasks.py  util.py
src/tests/: ffmpeg_test.py
